# SlipStream

./: README.txt
Client/examples/counter/: counter.cpp  counter.pro
Client/examples/fib/: fib.cpp  fib.pro
Client/examples/filter-reduce/: filter-reduce.pro  filter_reduce.cpp
Client/examples/writer/: writer.cpp  writer.pro
Client/examples/writer_V2/: Writer_Monad.pro  writer.cpp
Client/include/: QBlock.h  QBlock.java
ClientHTML5Gap/daciis_test/daciis_test/: daciis_test-Info.plist  daciis_test-Prefix.pch  main.m
ClientHTML5Gap/daciis_test/daciis_test.xcodeproj/: project.pbxproj
Service/: Add3intClosure.txt  AddSubVectorIntClosure  AddSubintClosure.txt  AddVectorIntClosure  AddintClosure.txt  ChainExecutor.txt  FunctionExecutor.txt  FunctionalChain.txt  MapClosure.txt  SubIntClosure.txt  X  mainProgram_deb.txt
Service/caller/: CallerProgram.java
Service/closureChain/: FunctionalChain.java
Service/closureLibrary/: Add3IntClosure.java  AddIntClosure.java  AddSubIntClosure.java  AddSubVecIntClosure.java  AddVectorIntClosure.java  AtomicClosure.java  ClosureUtilities.java  CompleteAtomicClosureTemplate.java  FunctionalParPort.java  FunctionalParameter.java  InputPort.java  Logger.java  MapClosure.java  OntologyVocabulary.java  OutputPort.java  Parameter.java  SibConstants.java  SingleParPort.java  SingleParameter.java  SubIntClosure.java  TriplesUtilities.java  VectorParPort.java  VectorParameter.java  VectorialToSingleParameters.java
Service/executor/: ChainExecutor.java  ComputationManager.java  FunctionExecutor.java
WCFClient/: Program.cs  WCFClient.csproj  WCFClient.sln
WCFClient/Properties/: AssemblyInfo.cs
WCFClient/WCFInterface/: IService1.cs  WCFInterface.csproj
WCFClient/WCFInterface/Properties/: AssemblyInfo.cs
WCFClient/WCFProxy/: LamdaProxyHelper.cs  WCFProxy.csproj
WCFClient/WCFProxy/Properties/: App.config  AssemblyInfo.cs
WCFClient/WcfService1/: Service1.svc.cs  WcfService1.csproj  Web.config
WCFClient/WcfService1/Properties/: AssemblyInfo.cs
WCFService/: Service1.cs  WCFService.csproj
WCFService/Properties/: AssemblyInfo.cs
doc/: Documentation about realized software for sending computation.docx
ontology/: TestCloud.owl
tests/blcr_test/: Makefile.in  autogen.sh  config.h.in  configure  configure.ac
tests/blcr_test/include/: Makefile.in
tests/blcr_test/src/: Makefile.am  Makefile.in  main.c
tests/qt_blcr_test/QBlockTest2/: QBlock.h  QBlockTest2.pro  counter.cpp
tests/qt_blcr_test/QtBlcrTest/: QtBlcrTest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/qt_blcr_test/QtCoreFutureBlcr/: Makefile  QtCoreFuture  QtCoreFuture.pro  corefuturetest.cpp  main.cpp  moc_corefuturetest.cpp
tests/qt_core_blcr_test/QtCoreBlcrTest/: QtCoreBlcrTest.pro  (+1 more)
tests/sharedmemory_test/: Makefile.am  config.h.in  test-qtcore.sh  test-shm.sh
tests/shm_test/sharedmemory_test/: Makefile.in  configure  configure.ac
tests/shm_test/sharedmemory_test/include/: Makefile.am  Makefile.in
tests/shm_test/sharedmemory_test/src/: Makefile.am  Makefile.in  shm_client.c
(+29 files in other folders)
